[package]
name = "dupes"
version = "0.2.0"
authors = ["fnordomat <46D46D1246803312401472B5A7427E237B7908CA>"]
edition = "2018"

[dependencies]
clap       = "2.33.1"
libc       = "0.2.74"
regex      = "1"
walkdir    = "2"
# ignore     = "0.4.16"
sha2       = "0.9.1"
serde      = "1.0.114"
serde_json = "1.0.57"
# num_cpus   = "1.13.0"
anyhow     = "1.0.32"
